Updated jade markup

--- a/playground/layouts/centered.jade
+++ b/playground/layouts/centered.jade
@@ -17,12 +17,12 @@ html(class='no-js')
 	body
 		include ../includes/browsehappy
 		include ../includes/analytics
-		div.atk-layout
-			div.atk-layout-row.atk-layout-fluid
-				div.atk-layout.atk-layout-cell
-					div.atk-layout-column.atk-valign-middle
-						div.atk-wrapper
-							div.atk-box-large
+		.atk-layout
+			.atk-layout-row.atk-layout-expand
+				.atk-layout.atk-layout-cell#atk-layout-content
+					.atk-layout-column.atk-layout-expand.atk-valign-middle
+						.atk-wrapper
+							.atk-box-large
 								h2 Box with content
 								p
 									| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, harum, atque culpa quibusdam praesentium ad optio eveniet iusto veritatis laboriosam delectus obcaecati earum recusandae a eos enim magni aliquid distinctio.
