--- a/playground/layouts/fixed.jade
+++ b/playground/layouts/fixed.jade
@@ -17,27 +17,27 @@ html(class='no-js')
 	body
 		include ../includes/browsehappy
 		include ../includes/analytics
-		div.atk-layout
-			div.atk-layout-row
-				div.atk-layout-cell.atk-swatch-ink
-					div.atk-wrapper.atk-section-small
+		.atk-layout
+			.atk-layout-row
+				.atk-layout-cell.atk-swatch-ink
+					.atk-wrapper.atk-section-small
 						h2 Header Section
-			div.atk-layout-row
-				div.atk-layout.atk-layout-cell#atk-layout-content
-					div.atk-layout-column.atk-layout-expand
-						div.atk-section-large.atk-swatch-yellow
-							div.atk-wrapper
+			.atk-layout-row
+				.atk-layout.atk-layout-cell#atk-layout-content
+					.atk-layout-column.atk-layout-expand
+						.atk-section-large.atk-swatch-yellow
+							.atk-wrapper
 								h2 Hero Section
 								p
 									| Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna. Fusce id interdum est. Donec tempor dignissim interdum. Nulla eu dignissim risus.
-						div.atk-section-large.atk-swatch-white
-							div.atk-wrapper
+						.atk-section-large.atk-swatch-white
+							.atk-wrapper
 								h2 Content Section
 								p
 									| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.
 								p
 									| Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.
-			div.atk-layout-row.atk-layout-expand.atk-swatch-gray
-				div.atk-layout-cell
-					div.atk-wrapper.atk-section
+			.atk-layout-row.atk-layout-expand.atk-swatch-gray
+				.atk-layout-cell
+					.atk-wrapper.atk-section
 						h2 Footer Section
