--- a/playground/layouts/fixed-multicol.jade
+++ b/playground/layouts/fixed-multicol.jade
@@ -17,21 +17,21 @@ html(class='no-js')
 	body
 		include ../includes/browsehappy
 		include ../includes/analytics
-		div.atk-layout
-			div.atk-layout-row
-				div.atk-layout-cell.atk-swatch-ink
-					div.atk-wrapper.atk-section-small
+		.atk-layout
+			.atk-layout-row
+				.atk-layout-cell.atk-swatch-ink
+					.atk-wrapper.atk-section-small
 						h2 Header Section
-			div.atk-layout-row
-				div.atk-layout.atk-layout-cell#atk-layout-content
-					div.atk-layout-column.atk-layout-expand
-						div.atk-section-large.atk-swatch-yellow
-							div.atk-wrapper
+			.atk-layout-row
+				.atk-layout.atk-layout-cell#atk-layout-content
+					.atk-layout-column.atk-layout-expand
+						.atk-section-large.atk-swatch-yellow
+							.atk-wrapper
 								h2 Hero Section
-						div.atk-section-large.atk-swatch-white
-							div.atk-wrapper
-								div.atk-row
-									div.atk-col-8
+						.atk-section-large.atk-swatch-white
+							.atk-wrapper
+								.atk-row
+									.atk-col-8
 										h2 Content Section
 										p
 											| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.
@@ -39,12 +39,12 @@ html(class='no-js')
 											| Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.
 										p
 											| Vestibulum volutpat nec augue quis pretium. Etiam ullamcorper, est eget ultricies fermentum, libero nibh lobortis erat, eu ullamcorper leo lacus eget augue. Mauris ac erat placerat, volutpat lorem consequat, pulvinar sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse potenti. Nulla imperdiet laoreet augue pretium posuere.
-									div.atk-col-4
-										div.atk-box.atk-swatch-gray
+									.atk-col-4
+										.atk-box.atk-swatch-gray
 											h2 Sidebar
 											p
 												| Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna. Fusce id interdum est. Donec tempor dignissim interdum. Nulla eu dignissim risus.
-			div.atk-layout-row.atk-layout-expand.atk-swatch-gray
-				div.atk-layout-cell
-					div.atk-wrapper.atk-section
+			.atk-layout-row.atk-layout-expand.atk-swatch-gray
+				.atk-layout-cell
+					.atk-wrapper.atk-section
 						h2 Footer Section
