--- a/playground/layouts/fluid.jade
+++ b/playground/layouts/fluid.jade
@@ -17,31 +17,31 @@ html(class='no-js')
   body
     include ../includes/browsehappy
     include ../includes/analytics
-    div.atk-layout
-      div.atk-layout-row
-        div.atk-layout-cell.atk-swatch-ink
-          div.atk-wrapper.atk-padding-small
+    .atk-layout
+      .atk-layout-row
+        .atk-layout-cell.atk-swatch-ink
+          .atk-wrapper.atk-padding-small
             h2 Header Area
-      div.atk-layout-row.atk-layout-expand
-        div.atk-layout.atk-layout-cell#atk-layout-content
-          div.atk-layout-column.atk-swatch-gray.atk-col-3
-            div.atk-padding
+      .atk-layout-row.atk-layout-expand
+        .atk-layout.atk-layout-cell#atk-layout-content
+          .atk-layout-column.atk-swatch-gray.atk-col-3
+            .atk-padding
               h2 Left Sidebar
               p
                 | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna.
-          div.atk-layout-column.atk-layout-expand
-            div.atk-wrapper.atk-padding-large
+          .atk-layout-column.atk-layout-expand
+            .atk-wrapper.atk-padding-large
               h2 Content Area
               p
                 | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.
               p
                 | Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.
-          div.atk-layout-column.atk-swatch-gray.atk-col-3
-            div.atk-padding
+          .atk-layout-column.atk-swatch-gray.atk-col-3
+            .atk-padding
               h2 Right Sidebar
               p
                 | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna.
-      div.atk-layout-row
-        div.atk-layout-cell.atk-swatch-ink
-          div.atk-wrapper.atk-padding
+      .atk-layout-row
+        .atk-layout-cell.atk-swatch-ink
+          .atk-wrapper.atk-padding
             h2 Footer Area
