New swatch features.

--- a/framework/css/theme.less
+++ b/framework/css/theme.less
@@ -4,7 +4,7 @@
  *  Theme: Default
  */
 
-// @import '../less/agiletoolkit.less';
+@import '../less/agiletoolkit.less';
 
 
 // ==========================================================
@@ -93,6 +93,8 @@
 @boxColor:             #fff;
 
 @formMandatory:        #ff0000;
+
+@hoverIntensity:       5%;
 
 @inputFocus:           @atk-swatch-blue;
 @inputPlaceholder:     lighten(@bodyColor, 60%);
