--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -69,6 +69,8 @@
 
 @formMandatory:        #ff0000;
 
+@hoverIntensity:       7%;
+
 @inputFocus:           @atk-swatch-blue;
 @inputPlaceholder:     lighten(@bodyColor, 60%);
 
