--- a/framework/wtf/themes/theme.less
+++ b/framework/wtf/themes/theme.less
@@ -94,6 +94,8 @@
 
 @formMandatory:        #ff0000;
 
+@hoverIntensity:       7%;
+
 @inputFocus:           @atk-swatch-blue;
 
 @popoverArrow:        12px;
