--- a/playground/includes/playground-components.jade
+++ b/playground/includes/playground-components.jade
@@ -227,21 +227,21 @@ section#components
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)') Item #2
       li
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)') Item #3
-      li.atk-swatch-green
+      li.atk-swatch-gray
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)')
           | Item #4&nbsp;
           span.icon-down-dir
         ul.atk-menu-horizontal
           li
-            a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #1
+            a.atk-padding-small.atk-swatch-gray(href='javascript:void(0)') Subitem #1
           li
-            a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #2
+            a.atk-padding-small.atk-swatch-gray(href='javascript:void(0)') Subitem #2
           li
-            a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #3
+            a.atk-padding-small.atk-swatch-gray(href='javascript:void(0)') Subitem #3
           li
-            a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #4
+            a.atk-padding-small.atk-swatch-gray(href='javascript:void(0)') Subitem #4
           li
-            a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #5
+            a.atk-padding-small.atk-swatch-gray(href='javascript:void(0)') Subitem #5
       li.atk-swatch-blue
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)')
           | Item #5&nbsp;
@@ -333,7 +333,7 @@ section#components
             a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #4
           li
             a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #5
-      li.atk-swatch-blue
+      li.atk-swatch-white
         a.atk-padding-small.atk-swatch-ink.atk-cells(href='javascript:void(0)')
           span.atk-cell.atk-jackscrew
             span.icon-chat-empty
@@ -343,15 +343,15 @@ section#components
             span.icon-right-dir
         ul.atk-menu-horizontal
           li
-            a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #1
+            a.atk-padding-small.atk-swatch-white(href='javascript:void(0)') Subitem #1
           li
-            a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #2
+            a.atk-padding-small.atk-swatch-white(href='javascript:void(0)') Subitem #2
           li
-            a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #3
+            a.atk-padding-small.atk-swatch-white(href='javascript:void(0)') Subitem #3
           li
-            a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #4
+            a.atk-padding-small.atk-swatch-white(href='javascript:void(0)') Subitem #4
           li
-            a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #5
+            a.atk-padding-small.atk-swatch-white(href='javascript:void(0)') Subitem #5
   //- p
   //-   | Component&nbsp;
   //-   span.atk-label.atk-effect-info .atk-menu-horizontal
