--- a/framework/css/compact.css
+++ b/framework/css/compact.css
@@ -4799,6 +4799,7 @@ h4,
   font-size: 0.97397431rem;
 }
 h5,
+.atk-size-default,
 .atk-size-reset {
   font-size: 0.8rem;
 }
@@ -4853,6 +4854,9 @@ a.atk-text-baseline-reset.ui-button,
 button.atk-text-baseline-reset.ui-button,
 input.atk-text-baseline-reset.ui-button {
   line-height: 1;
+}
+.atk-text-baseline-default {
+  line-height: 1.3;
 }
 .atk-text-ellipsis {
   display: inline-block;
@@ -5627,6 +5631,9 @@ a:focus {
 .atk-cells.atk-cells-justified {
   table-layout: fixed;
 }
+.atk-cells[class*=atk-move] {
+  width: auto;
+}
 .atk-cells-group {
   display: table;
 }
@@ -5656,6 +5663,11 @@ a:focus {
 *[class*=atk-cells-gutter].atk-cells-group.atk-cells-gutter-small > .atk-cells > .atk-cell {
   padding-left: 0.175em;
   padding-right: 0.175em;
+}
+*[class*=atk-cells-gutter].atk-cells.atk-cells-gutter-xsmall > .atk-cell,
+*[class*=atk-cells-gutter].atk-cells-group.atk-cells-gutter-xsmall > .atk-cells > .atk-cell {
+  padding-left: 0.0875em;
+  padding-right: 0.0875em;
 }
 *[class*=atk-cells-gutter].atk-cells > .atk-cell:first-child,
 *[class*=atk-cells-gutter].atk-cells-group > .atk-cells > .atk-cell:first-child {
@@ -5825,12 +5837,12 @@ ul[class*=atk-menu] > li > a {
   display: inline-block;
   white-space: nowrap;
 }
-ul[class*=atk-menu] > li *[class*=atk-menu] {
+ul[class*=atk-menu] > li *[class*=atk-menu]:not(.atk-menu-separated) {
   display: none;
   z-index: 99;
 }
-ul[class*=atk-menu] > li *[class*=atk-menu],
-ul[class*=atk-menu] > li *[class*=atk-menu] li {
+ul[class*=atk-menu] > li *[class*=atk-menu]:not(.atk-menu-separated),
+ul[class*=atk-menu] > li *[class*=atk-menu]:not(.atk-menu-separated) li {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -5853,11 +5865,15 @@ ul[class*=atk-menu]:not([class*=atk-actions]) > li {
 ul[class*=atk-menu].atk-menu-horizontal > li > a *[class*='icon']:before {
   margin: 0;
 }
-ul[class*=atk-menu].atk-menu-horizontal > li *[class*=atk-menu] {
+ul[class*=atk-menu].atk-menu-horizontal > li *[class*=atk-menu]:not(.atk-menu-separated) {
   position: absolute;
   top: 100%;
   left: 0;
   min-width: 100%;
+}
+ul[class*=atk-menu].atk-menu-horizontal > li *[class*=atk-menu]:not(.atk-menu-separated).atk-menu-right {
+  left: auto;
+  right: 0;
 }
 ul[class*=atk-menu].atk-menu-vertical {
   display: block;
@@ -5872,7 +5888,7 @@ ul[class*=atk-menu].atk-menu-vertical > li a {
 ul[class*=atk-menu].atk-menu-vertical > li a[class*=atk-button] {
   text-align: left;
 }
-ul[class*=atk-menu].atk-menu-vertical > li *[class*=atk-menu] {
+ul[class*=atk-menu].atk-menu-vertical > li *[class*=atk-menu]:not(.atk-menu-separated) {
   position: absolute;
   top: 0;
   left: 100%;
@@ -6114,6 +6130,66 @@ img.atk-shape-rounded {
   -moz-border-radius: 5px;
   border-radius: 5px;
 }
+.atk-shape-rounded-top,
+img.atk-shape-rounded-top {
+  -webkit-border-top-left-radius: 5px;
+  -moz-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.atk-shape-rounded-bottom,
+img.atk-shape-rounded-bottom {
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-bottom-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  -moz-border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.atk-shape-rounded-left,
+img.atk-shape-rounded-left {
+  -webkit-border-top-left-radius: 5px;
+  -moz-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-bottom-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.atk-shape-rounded-right,
+img.atk-shape-rounded-right {
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  -moz-border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.atk-shape-rounded-top-left,
+img.atk-shape-rounded-top-left {
+  -webkit-border-top-left-radius: 5px;
+  -moz-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
+}
+.atk-shape-rounded-top-right,
+img.atk-shape-rounded-top-right {
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.atk-shape-rounded-bottom-left,
+img.atk-shape-rounded-bottom-left {
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-bottom-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.atk-shape-rounded-bottom-right,
+img.atk-shape-rounded-bottom-right {
+  -webkit-border-bottom-right-radius: 5px;
+  -moz-border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
 .atk-shape-circle,
 img.atk-shape-circle,
 a.atk-shape-circle[class*='atk-button'],
@@ -6227,6 +6303,9 @@ input.atk-shape-circle.ui-button {
 .atk-swatch-white:not(.atk-text-inherit) a {
   color: black;
 }
+*[class*=atk-swatch] .atk-swatch-white:not(.atk-text-inherit) a {
+  color: black;
+}
 .atk-swatch-white:not(.atk-text-inherit) hr {
   border-color: #000;
 }
@@ -6255,7 +6334,7 @@ a.atk-swatch-white:not(.atk-text-inherit)[class*=icon-] {
 a.atk-swatch-white:not(.atk-text-inherit):hover,
 .atk-swatch-white:not(.atk-text-inherit)[class*=atk-button]:hover {
   color: black;
-  background: #ffffff;
+  background-color: #ededed;
 }
 .atk-swatch-white:not(.atk-text-inherit)[class*='atk-button'],
 .atk-swatch-white:not(.atk-text-inherit).atk-label,
@@ -6272,8 +6351,17 @@ a.atk-swatch-white:not(.atk-text-inherit):hover,
 .atk-swatch-white:not(.atk-text-inherit)[class*='atk-button']:hover {
   border-color: #e6e6e6;
 }
+*[class*=atk-menu] > li.atk-menu-separated:not(:first-child) > a.atk-swatch-white:not(.atk-text-inherit) {
+  border-color: #NaNNaNNaN;
+  border-style: solid;
+  border-width: 1px 0 0 0;
+}
+*[class*=atk-menu] li[class*=atk-swatch] a.atk-swatch-white:not(.atk-text-inherit) {
+  color: black;
+}
 *[class*=atk-menu] li:hover.atk-swatch-white:not(.atk-text-inherit) > a {
   color: black;
+  color: black !important;
 }
 .atk-swatch-white {
   background: #ffffff;
@@ -6284,6 +6372,9 @@ a.atk-swatch-white:not(.atk-text-inherit):hover,
   border-color: #f5f6f7;
 }
 .atk-swatch-gray:not(.atk-text-inherit) a {
+  color: black;
+}
+*[class*=atk-swatch] .atk-swatch-gray:not(.atk-text-inherit) a {
   color: black;
 }
 .atk-swatch-gray:not(.atk-text-inherit) hr {
@@ -6314,7 +6405,7 @@ a.atk-swatch-gray:not(.atk-text-inherit)[class*=icon-] {
 a.atk-swatch-gray:not(.atk-text-inherit):hover,
 .atk-swatch-gray:not(.atk-text-inherit)[class*=atk-button]:hover {
   color: black;
-  background: #f6f7f8;
+  background-color: #e4e5e6;
 }
 .atk-swatch-gray:not(.atk-text-inherit)[class*='atk-button'],
 .atk-swatch-gray:not(.atk-text-inherit).atk-label,
@@ -6331,8 +6422,17 @@ a.atk-swatch-gray:not(.atk-text-inherit):hover,
 .atk-swatch-gray:not(.atk-text-inherit)[class*='atk-button']:hover {
   border-color: #d9dde0;
 }
+*[class*=atk-menu] > li.atk-menu-separated:not(:first-child) > a.atk-swatch-gray:not(.atk-text-inherit) {
+  border-color: #NaNNaNNaN;
+  border-style: solid;
+  border-width: 1px 0 0 0;
+}
+*[class*=atk-menu] li[class*=atk-swatch] a.atk-swatch-gray:not(.atk-text-inherit) {
+  color: black;
+}
 *[class*=atk-menu] li:hover.atk-swatch-gray:not(.atk-text-inherit) > a {
   color: black;
+  color: black !important;
 }
 .atk-swatch-gray {
   background: #f5f6f7;
@@ -6343,6 +6443,9 @@ a.atk-swatch-gray:not(.atk-text-inherit):hover,
   border-color: #1c2933;
 }
 .atk-swatch-ink:not(.atk-text-inherit) a {
+  color: white;
+}
+*[class*=atk-swatch] .atk-swatch-ink:not(.atk-text-inherit) a {
   color: white;
 }
 .atk-swatch-ink:not(.atk-text-inherit) hr {
@@ -6373,7 +6476,7 @@ a.atk-swatch-ink:not(.atk-text-inherit)[class*=icon-] {
 a.atk-swatch-ink:not(.atk-text-inherit):hover,
 .atk-swatch-ink:not(.atk-text-inherit)[class*=atk-button]:hover {
   color: white;
-  background: #333e47;
+  background-color: #2c3841;
 }
 .atk-swatch-ink:not(.atk-text-inherit)[class*='atk-button'],
 .atk-swatch-ink:not(.atk-text-inherit).atk-label,
@@ -6390,8 +6493,17 @@ a.atk-swatch-ink:not(.atk-text-inherit):hover,
 .atk-swatch-ink:not(.atk-text-inherit)[class*='atk-button']:hover {
   border-color: #0a0f12;
 }
+*[class*=atk-menu] > li.atk-menu-separated:not(:first-child) > a.atk-swatch-ink:not(.atk-text-inherit) {
+  border-color: #2c3841;
+  border-style: solid;
+  border-width: 1px 0 0 0;
+}
+*[class*=atk-menu] li[class*=atk-swatch] a.atk-swatch-ink:not(.atk-text-inherit) {
+  color: white;
+}
 *[class*=atk-menu] li:hover.atk-swatch-ink:not(.atk-text-inherit) > a {
   color: white;
+  color: white !important;
 }
 .atk-swatch-ink {
   background: #1c2933;
@@ -6402,6 +6514,9 @@ a.atk-swatch-ink:not(.atk-text-inherit):hover,
   border-color: #ffcc00;
 }
 .atk-swatch-yellow:not(.atk-text-inherit) a {
+  color: black;
+}
+*[class*=atk-swatch] .atk-swatch-yellow:not(.atk-text-inherit) a {
   color: black;
 }
 .atk-swatch-yellow:not(.atk-text-inherit) hr {
@@ -6432,7 +6547,7 @@ a.atk-swatch-yellow:not(.atk-text-inherit)[class*=icon-] {
 a.atk-swatch-yellow:not(.atk-text-inherit):hover,
 .atk-swatch-yellow:not(.atk-text-inherit)[class*=atk-button]:hover {
   color: black;
-  background: #ffd119;
+  background-color: #edbe00;
 }
 .atk-swatch-yellow:not(.atk-text-inherit)[class*='atk-button'],
 .atk-swatch-yellow:not(.atk-text-inherit).atk-label,
@@ -6449,8 +6564,17 @@ a.atk-swatch-yellow:not(.atk-text-inherit):hover,
 .atk-swatch-yellow:not(.atk-text-inherit)[class*='atk-button']:hover {
   border-color: #cca300;
 }
+*[class*=atk-menu] > li.atk-menu-separated:not(:first-child) > a.atk-swatch-yellow:not(.atk-text-inherit) {
+  border-color: #NaNNaNNaN;
+  border-style: solid;
+  border-width: 1px 0 0 0;
+}
+*[class*=atk-menu] li[class*=atk-swatch] a.atk-swatch-yellow:not(.atk-text-inherit) {
+  color: black;
+}
 *[class*=atk-menu] li:hover.atk-swatch-yellow:not(.atk-text-inherit) > a {
   color: black;
+  color: black !important;
 }
 .atk-swatch-yellow {
   background: #ffcc00;
@@ -6461,6 +6585,9 @@ a.atk-swatch-yellow:not(.atk-text-inherit):hover,
   border-color: #f9451f;
 }
 .atk-swatch-red:not(.atk-text-inherit) a {
+  color: white;
+}
+*[class*=atk-swatch] .atk-swatch-red:not(.atk-text-inherit) a {
   color: white;
 }
 .atk-swatch-red:not(.atk-text-inherit) hr {
@@ -6491,7 +6618,7 @@ a.atk-swatch-red:not(.atk-text-inherit)[class*=icon-] {
 a.atk-swatch-red:not(.atk-text-inherit):hover,
 .atk-swatch-red:not(.atk-text-inherit)[class*=atk-button]:hover {
   color: white;
-  background: #fa5835;
+  background-color: #f9522f;
 }
 .atk-swatch-red:not(.atk-text-inherit)[class*='atk-button'],
 .atk-swatch-red:not(.atk-text-inherit).atk-label,
@@ -6508,8 +6635,17 @@ a.atk-swatch-red:not(.atk-text-inherit):hover,
 .atk-swatch-red:not(.atk-text-inherit)[class*='atk-button']:hover {
   border-color: #df2c06;
 }
+*[class*=atk-menu] > li.atk-menu-separated:not(:first-child) > a.atk-swatch-red:not(.atk-text-inherit) {
+  border-color: #f9522f;
+  border-style: solid;
+  border-width: 1px 0 0 0;
+}
+*[class*=atk-menu] li[class*=atk-swatch] a.atk-swatch-red:not(.atk-text-inherit) {
+  color: white;
+}
 *[class*=atk-menu] li:hover.atk-swatch-red:not(.atk-text-inherit) > a {
   color: white;
+  color: white !important;
 }
 .atk-swatch-red {
   background: #f9451f;
@@ -6520,6 +6656,9 @@ a.atk-swatch-red:not(.atk-text-inherit):hover,
   border-color: #00cc66;
 }
 .atk-swatch-green:not(.atk-text-inherit) a {
+  color: white;
+}
+*[class*=atk-swatch] .atk-swatch-green:not(.atk-text-inherit) a {
   color: white;
 }
 .atk-swatch-green:not(.atk-text-inherit) hr {
@@ -6550,7 +6689,7 @@ a.atk-swatch-green:not(.atk-text-inherit)[class*=icon-] {
 a.atk-swatch-green:not(.atk-text-inherit):hover,
 .atk-swatch-green:not(.atk-text-inherit)[class*=atk-button]:hover {
   color: white;
-  background: #19d175;
+  background-color: #12d071;
 }
 .atk-swatch-green:not(.atk-text-inherit)[class*='atk-button'],
 .atk-swatch-green:not(.atk-text-inherit).atk-label,
@@ -6567,8 +6706,17 @@ a.atk-swatch-green:not(.atk-text-inherit):hover,
 .atk-swatch-green:not(.atk-text-inherit)[class*='atk-button']:hover {
   border-color: #00994d;
 }
+*[class*=atk-menu] > li.atk-menu-separated:not(:first-child) > a.atk-swatch-green:not(.atk-text-inherit) {
+  border-color: #12d071;
+  border-style: solid;
+  border-width: 1px 0 0 0;
+}
+*[class*=atk-menu] li[class*=atk-swatch] a.atk-swatch-green:not(.atk-text-inherit) {
+  color: white;
+}
 *[class*=atk-menu] li:hover.atk-swatch-green:not(.atk-text-inherit) > a {
   color: white;
+  color: white !important;
 }
 .atk-swatch-green {
   background: #00cc66;
@@ -6579,6 +6727,9 @@ a.atk-swatch-green:not(.atk-text-inherit):hover,
   border-color: #0095ff;
 }
 .atk-swatch-blue:not(.atk-text-inherit) a {
+  color: white;
+}
+*[class*=atk-swatch] .atk-swatch-blue:not(.atk-text-inherit) a {
   color: white;
 }
 .atk-swatch-blue:not(.atk-text-inherit) hr {
@@ -6609,7 +6760,7 @@ a.atk-swatch-blue:not(.atk-text-inherit)[class*=icon-] {
 a.atk-swatch-blue:not(.atk-text-inherit):hover,
 .atk-swatch-blue:not(.atk-text-inherit)[class*=atk-button]:hover {
   color: white;
-  background: #19a0ff;
+  background-color: #129cff;
 }
 .atk-swatch-blue:not(.atk-text-inherit)[class*='atk-button'],
 .atk-swatch-blue:not(.atk-text-inherit).atk-label,
@@ -6626,8 +6777,17 @@ a.atk-swatch-blue:not(.atk-text-inherit):hover,
 .atk-swatch-blue:not(.atk-text-inherit)[class*='atk-button']:hover {
   border-color: #0077cc;
 }
+*[class*=atk-menu] > li.atk-menu-separated:not(:first-child) > a.atk-swatch-blue:not(.atk-text-inherit) {
+  border-color: #129cff;
+  border-style: solid;
+  border-width: 1px 0 0 0;
+}
+*[class*=atk-menu] li[class*=atk-swatch] a.atk-swatch-blue:not(.atk-text-inherit) {
+  color: white;
+}
 *[class*=atk-menu] li:hover.atk-swatch-blue:not(.atk-text-inherit) > a {
   color: white;
+  color: white !important;
 }
 .atk-swatch-blue {
   background: #0095ff;
