--- a/framework/css/theme.less
+++ b/framework/css/theme.less
@@ -28,12 +28,12 @@
 // ==========================================================
 
 @bodyFamily:           "Helvetica Neue", "Helvetica", @jui-ffDefault;
-@bodyColor:            #000;
+@bodyColor:            #4c5359;
 @bodySize:             0.875rem; // 14px
 @bodyBaseline:         1.618; // Golden Section
 
 @headingCase:          none; // Options: none, capitalize, uppercase, lowercase
-@headingColor:         #000;
+@headingColor:         #3d4c59;
 @headingFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault;
 @headingWeight:		   400;
 @headingBaseline:	   1.2; // Minor Third
@@ -54,7 +54,7 @@
 
 @blur:                 5px; // Effect .atk-blur can be applied on any element.
 
-@borderStatic:         #e1e1e1;
+@borderStatic:         #dadde0;
 @borderClickable:      darken(@borderStatic, 10%);
 @borderOverlay:        darken(@borderStatic, 25%);
 
@@ -94,12 +94,14 @@
 
 @formMandatory:        #ff0000;
 
-@hoverIntensity:       5%;
+@hoverIntensity:       3%;
+
+@textDimmed:           desaturate(lighten(@bodyColor, 25%), 2%);
 
 @inputFocus:           @atk-swatch-blue;
-@inputPlaceholder:     lighten(@bodyColor, 60%);
+@inputPlaceholder:     lighten(@bodyColor, 40%);
 
-@popoverArrow:        12px;
+@popoverArrow:         12px;
 
 
 // ==========================================================
