--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -1,14 +1,36 @@
+/**
+ *  Agile Toolkit CSS Framework (c) 2013-2014 v0.904
+ *  http://www4.agiletoolkit.org/css
+ *  Theme: Default
+ */
+
+// ==========================================================
+// Layout
+// ==========================================================
+
+// Important: list .createViewport functions in the right order based on @min and @max values otherwise styles get overridden
+.createViewport(
+	@wrapperMargin: @margin,
+	@colsGutter: @margin,
+	@cols: 12,
+	@viewportMinWidth:769px
+);
+
+.createViewport(@class: 'tablet', @viewportMaxWidth:768px, @cols:6, @colsGutter: 30px, @stackLayout:true, @wrapperMargin: 20px);
+.createViewport(@class: 'mobile', @viewportMaxWidth:479px, @cols:3, @colsGutter: 20px,  @stackLayout:true, @wrapperMargin: 20px);
+
+
 // ==========================================================
 // Typography
 // ==========================================================
 
 @bodyFamily:           "Helvetica Neue", "Helvetica", @jui-ffDefault;
-@bodyColor:            #000;
+@bodyColor:            #4c5359;
 @bodySize:             0.875rem; // 14px
 @bodyBaseline:         1.618; // Golden Section
 
 @headingCase:          none; // Options: none, capitalize, uppercase, lowercase
-@headingColor:         #000;
+@headingColor:         #3d4c59;
 @headingFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault;
 @headingWeight:		   400;
 @headingBaseline:	   1.2; // Minor Third
@@ -29,7 +51,7 @@
 
 @blur:                 5px; // Effect .atk-blur can be applied on any element.
 
-@borderStatic:         #e1e1e1;
+@borderStatic:         #dcdee0;
 @borderClickable:      darken(@borderStatic, 10%);
 @borderOverlay:        darken(@borderStatic, 25%);
 
@@ -69,9 +91,16 @@
 
 @formMandatory:        #ff0000;
 
-@hoverIntensity:       7%;
+@hoverIntensity:       3%;
+
+@textDimmed:           lighten(@bodyColor, 20%);
 
 @inputFocus:           @atk-swatch-blue;
-@inputPlaceholder:     lighten(@bodyColor, 60%);
+@inputPlaceholder:     lighten(@bodyColor, 40%);
 
 @popoverArrow:        12px;
+
+
+// ==========================================================
+// Your Code Goes Here
+// ==========================================================
