--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -44,6 +44,10 @@
         }
     }
 }
+.atk-sep-xsmall {
+    margin-left: @margin/5 !important;
+    margin-right: @margin/5 !important;
+}
 .atk-sep-small {
     margin-left: @margin/4 !important;
     margin-right: @margin/4 !important;
@@ -59,6 +63,9 @@
 .atk-sep-xlarge {
     margin-left: @margin !important;
     margin-right: @margin !important;
+}
+*[class*=atk-sep]:first-child {
+  margin-left: 0 !important;
 }
 
 // Layout
