--- a/playground/css/theme-fluid.less
+++ b/playground/css/theme-fluid.less
@@ -47,7 +47,7 @@
 @cornerRadius:         5px;
 
 @textSelect:           @atk-swatch-ink; // Text selection's color
-@textDimmed:           40%;
+@textDimmed:           lighten(@bodyColor, 40%);
 
 @blur:                 5px; // Effect .atk-blur can be applied on any element.
 
