--- a/playground/css/theme.css
+++ b/playground/css/theme.css
@@ -4771,13 +4771,13 @@ h6 + .atk-form {
   margin-top: 1.6rem;
 }
 .atk-size-yotta {
-  font-size: 3.28623771rem;
+  font-size: 4.71446986rem;
 }
 .atk-size-zetta {
-  font-size: 2.91376382rem;
+  font-size: 3.7063259rem;
 }
 .atk-size-exa {
-  font-size: 2.58350744rem;
+  font-size: 2.91376382rem;
 }
 .atk-size-peta {
   font-size: 2.2906835rem;
@@ -4836,11 +4836,11 @@ h6 {
 }
 .atk-text-dimmed a,
 *[class*=atk-swatch]:not(.atk-text-inherit) .atk-text-dimmed a:link {
-  color: #727980;
+  color: #666c72;
 }
 .atk-text-dimmed a:hover,
 *[class*=atk-swatch]:not(.atk-text-inherit) .atk-text-dimmed a:link:hover {
-  color: #636a70;
+  color: #575d62;
 }
 a.atk-text-dimmed,
 *[class*=atk-swatch] a.atk-text-dimmed {
@@ -5615,6 +5615,10 @@ a:focus {
 .atk-actions-xxlarge > *.atk-sep + * {
   margin-left: 0;
 }
+.atk-sep-xsmall {
+  margin-left: 0.32rem !important;
+  margin-right: 0.32rem !important;
+}
 .atk-sep-small {
   margin-left: 0.4rem !important;
   margin-right: 0.4rem !important;
@@ -5630,6 +5634,9 @@ a:focus {
 .atk-sep-xlarge {
   margin-left: 1.6rem !important;
   margin-right: 1.6rem !important;
+}
+*[class*=atk-sep]:first-child {
+  margin-left: 0 !important;
 }
 .atk-cells {
   display: table;
@@ -6337,205 +6344,6 @@ input.atk-shape-circle.ui-button {
  *  http://www4.agiletoolkit.org/css
  *  Theme: Default
  */
-@media screen and (min-width: 769px) {
-  .atk-layout > .atk-layout-row > .atk-layout-cell {
-    min-width: 100%;
-  }
-  .atk-wrapper {
-    min-width: 0;
-    max-width: 100%;
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
-  }
-  .atk-row {
-    margin-left: -1.6rem;
-  }
-  .atk-row *[class*=atk-col] {
-    border: 0px solid rgba(0, 0, 0, 0);
-    border-left-width: 1.6rem;
-  }
-  *[class*=atk-col] {
-    width: 100%;
-  }
-  .atk-col-1,
-  .atk-col-1[class*=atk-col] {
-    width: 8.33333333%;
-  }
-  .atk-col-2,
-  .atk-col-2[class*=atk-col] {
-    width: 16.66666667%;
-  }
-  .atk-col-3,
-  .atk-col-3[class*=atk-col] {
-    width: 25%;
-  }
-  .atk-col-4,
-  .atk-col-4[class*=atk-col] {
-    width: 33.33333333%;
-  }
-  .atk-col-5,
-  .atk-col-5[class*=atk-col] {
-    width: 41.66666667%;
-  }
-  .atk-col-6,
-  .atk-col-6[class*=atk-col] {
-    width: 50%;
-  }
-  .atk-col-7,
-  .atk-col-7[class*=atk-col] {
-    width: 58.33333333%;
-  }
-  .atk-col-8,
-  .atk-col-8[class*=atk-col] {
-    width: 66.66666667%;
-  }
-  .atk-col-9,
-  .atk-col-9[class*=atk-col] {
-    width: 75%;
-  }
-  .atk-col-10,
-  .atk-col-10[class*=atk-col] {
-    width: 83.33333333%;
-  }
-  .atk-col-11,
-  .atk-col-11[class*=atk-col] {
-    width: 91.66666667%;
-  }
-  .atk-col-12,
-  .atk-col-12[class*=atk-col] {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 768px) {
-  .atk-layout > .atk-layout-row > .atk-layout-cell {
-    min-width: 100%;
-  }
-  .atk-wrapper {
-    min-width: 0;
-    max-width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .atk-row {
-    margin-left: -30px;
-  }
-  .atk-row *[class*=atk-col] {
-    border: 0px solid rgba(0, 0, 0, 0);
-    border-left-width: 30px;
-  }
-  *[class*=atk-col] {
-    width: 100%;
-  }
-  .atk-layout,
-  .atk-layout > .atk-layout-column,
-  .atk-layout .atk-layout-cell,
-  .atk-layout .atk-layout-row {
-    display: block;
-  }
-  .atk-layout .atk-layout-row {
-    height: auto;
-  }
-  *[class*=atk-menu] > li > *[class*=atk-menu] {
-    bottom: 0 !important;
-    left: 0 !important;
-    position: relative !important;
-    right: 0 !important;
-    top: 0 !important;
-  }
-  *[class*=atk-menu] > li > *[class*=atk-menu].atk-menu-horizontal > li {
-    display: block;
-    float: none;
-  }
-  *[class*=atk-menu] > li:hover > *[class*=atk-menu] {
-    display: none !important;
-  }
-  *[class*=atk-menu] > li:focus {
-    display: none !important;
-  }
-  .atk-col-1,
-  .atk-col-1[class*=atk-col] {
-    width: 16.66666667%;
-  }
-  .atk-col-2,
-  .atk-col-2[class*=atk-col] {
-    width: 33.33333333%;
-  }
-  .atk-col-3,
-  .atk-col-3[class*=atk-col] {
-    width: 50%;
-  }
-  .atk-col-4,
-  .atk-col-4[class*=atk-col] {
-    width: 66.66666667%;
-  }
-  .atk-col-5,
-  .atk-col-5[class*=atk-col] {
-    width: 83.33333333%;
-  }
-  .atk-col-6,
-  .atk-col-6[class*=atk-col] {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 479px) {
-  .atk-layout > .atk-layout-row > .atk-layout-cell {
-    min-width: 100%;
-  }
-  .atk-wrapper {
-    min-width: 0;
-    max-width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .atk-row {
-    margin-left: -20px;
-  }
-  .atk-row *[class*=atk-col] {
-    border: 0px solid rgba(0, 0, 0, 0);
-    border-left-width: 20px;
-  }
-  *[class*=atk-col] {
-    width: 100%;
-  }
-  .atk-layout,
-  .atk-layout > .atk-layout-column,
-  .atk-layout .atk-layout-cell,
-  .atk-layout .atk-layout-row {
-    display: block;
-  }
-  .atk-layout .atk-layout-row {
-    height: auto;
-  }
-  *[class*=atk-menu] > li > *[class*=atk-menu] {
-    bottom: 0 !important;
-    left: 0 !important;
-    position: relative !important;
-    right: 0 !important;
-    top: 0 !important;
-  }
-  *[class*=atk-menu] > li > *[class*=atk-menu].atk-menu-horizontal > li {
-    display: block;
-    float: none;
-  }
-  *[class*=atk-menu] > li:hover > *[class*=atk-menu] {
-    display: none !important;
-  }
-  *[class*=atk-menu] > li:focus {
-    display: none !important;
-  }
-  .atk-col-1,
-  .atk-col-1[class*=atk-col] {
-    width: 33.33333333%;
-  }
-  .atk-col-2,
-  .atk-col-2[class*=atk-col] {
-    width: 66.66666667%;
-  }
-  .atk-col-3,
-  .atk-col-3[class*=atk-col] {
-    width: 100%;
-  }
-}
 .atk-swatch-white:not(.atk-text-inherit) {
   background: #ffffff;
   border-color: #ffffff;
