--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -41,6 +41,7 @@
 @borderOverlay:        darken(@borderStatic, 25%);
 
 @atk-swatch-white:	   #ffffff;		.createSwatch(atk-swatch-white);
+@atk-swatch-black:     #000000;		.createSwatch(atk-swatch-black);
 @atk-swatch-gray:	   #f5f6f7;		.createSwatch(atk-swatch-gray);
 @atk-swatch-ink:       #1c2933;		.createSwatch(atk-swatch-ink);
 @atk-swatch-yellow:	   #ffcc00;		.createSwatch(atk-swatch-yellow);
